# HomeWork

task1/: Приложение 1.py
task2/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
task2/sql/: init.sql
task2/sql/core/: load_hub_organization.sql  load_sat_organization_attrs.sql  load_sat_organization_changes.sql
task2/src/: core_builder.py  db.py  loader.py  test_api_units.py  test_loader.py
task2/test/: conftest.py  test_version_logic.py
