[project]
name = "task2"
version = "0.1.0"
description = "Задача на разработку пайплайна загрузки данных в DWH"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "psycopg2>=2.9.12"
]

[project.optional-dependencies]
dev = ["pytest>=9.1.1", "ruff>=0.1.6", "pytest-httpx>=0.36.2", "pytest-postgresql>=8.1.0"]

[tool.ruff]
line-length = 99
target-version = "py311"

